# Cary.Wallet.JNI.Library

./: .gitignore  .travis.yml  build.gradle  settings.gradle  walletlibrary.jks.enc
app/: build.gradle
app/src/androidTest/java/com/elastos/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/elastos/demo/: HomeActivity.java  MainActivity.java  RedPacketActivity.java  Utils.java  WordAdapter.java
app/src/main/res/layout/: home_activity_layout.xml  main_activity_layout.xml  red_packet_layout.xml  word_item_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/elastos/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
walletlibrary/: CMakeLists.txt  build.gradle
walletlibrary/src/main/: AndroidManifest.xml
walletlibrary/src/main/cpp/: Utility.cpp
walletlibrary/src/main/cpp/include/: Utility.h
walletlibrary/src/main/java/com/elastos/jni/: Utility.java
walletlibrary/src/main/res/values/: strings.xml
